Create a script that will make calls to a public movie database API to get the "popular" rating of each movie that Mr. H has personally rated, as well as other potentially useful information

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ __pycache__/
 
 # python virtual environment for development
 .venv/
+
+# config file (contains sensitive information)
+scripts/config.json
