Add workflow_dispatch run to movie data gatherer
For manual testing

--- a/.github/workflows/gather_data.yml
+++ b/.github/workflows/gather_data.yml
@@ -3,6 +3,7 @@ on:
   schedule:
     # Runs at midnight on the first day of each month
     - cron: '0 0 1 * *'
+  workflow_dispatch:
 
 jobs:
   get_ratings:
