Fix issue with improper token permissions causing git checkout fail

--- a/.github/workflows/gather_data.yml
+++ b/.github/workflows/gather_data.yml
@@ -9,8 +9,8 @@ jobs:
   get_ratings:
     runs-on: ubuntu-latest
     permissions:
-      # write permissions required for cancelling the workflow
-      actions: "write"
+      # write permissions required for checking out private repository
+      contents: write
 
     steps:
       - name: Checkout repository
